--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class=" coin-name">{{coin.name}}</div>
           </div>
           <div class="coin-price">
-            <strong>{{coin.valute[0]}}:</strong> {{coin.price[0]}} <br>
-            <strong>{{coin.valute[1]}}:</strong> {{coin.price[1]}} <br>
-            <strong>{{coin.valute[2]}}:</strong> {{coin.price[2]}}
+            <strong style="margin-right: 10px">{{coin.valute[0]}}:</strong> {{coin.price[0]}} <br>
+            <strong style="margin-right: 10px">{{coin.valute[1]}}:</strong> {{coin.price[1]}} <br>
+            <strong style="margin-right: 10px">{{coin.valute[2]}}:</strong> {{coin.price[2]}}
           </div>
         </div>
       </div>
